<resources>
    <string name="app_name">Comofood</string>
    <string name="slogan">Bienvenue à vous</string>
    <string name="textview">TextView</string>
    <string name="title_activity_acceuil">Acceuil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_plats">menu</string>
    <string name="menu_meilleur">Nos meilleurs plats</string>
    <string name="menu_tarif">Tarifs</string>
    <string name="menu_facture">Factures</string>
    <string name="menu_contact">contact</string>
</resources>